# csv_splitter_project

./: .gitignore  pyproject.toml
csv_splitter/: cli.py  dump_splitter.py  main.py  settings.py  utils.py
tests/: test_csv_splitter.py
